--- a/index.html
+++ b/index.html
@@ -8,7 +8,154 @@
     <!-- Tailwind css link -->
     <link href="assets/css/output.css" rel="stylesheet">
 </head>
-<body class="bg-blue-500">
-    bhk hyguf
+<body class="bg-green-200 py-5">
+
+   <!-- <h1 class="font-semibold text-center mb-5">Whatsapp UI Challenge (screen 1) </h1> -->
+
+   <section class="max-w-md mx-auto">
+    <div class="static">
+    <div class="text-white  bg-emerald-800 px-3 py-2 flex justify-between items-center">
+        <h4 class="font-semibold text-lg">WhatsApp</h4>
+        <div class="flex space-x-4">
+          <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" class="fill-current"><path d="M12 17.5q1.875 0 3.188-1.312T16.5 13q0-1.875-1.312-3.187T12 8.5q-1.875 0-3.187 1.313T7.5 13q0 1.875 1.313 3.188T12 17.5m0-2q-1.05 0-1.775-.725T9.5 13q0-1.05.725-1.775T12 10.5q1.05 0 1.775.725T14.5 13q0 1.05-.725 1.775T12 15.5M4 21q-.825 0-1.412-.587T2 19V7q0-.825.588-1.412T4 5h3.15L9 3h6l1.85 2H20q.825 0 1.413.588T22 7v12q0 .825-.587 1.413T20 21zm0-2h16V7h-4.05l-1.825-2h-4.25L8.05 7H4zm8-6"/></svg>
+  
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="currentColor" d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5A6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5S14 7.01 14 9.5S11.99 14 9.5 14"/></svg>
+  
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256"><path fill="currentColor" d="M156 128a28 28 0 1 1-28-28a28 28 0 0 1 28 28m-28-52a28 28 0 1 0-28-28a28 28 0 0 0 28 28m0 104a28 28 0 1 0 28 28a28 28 0 0 0-28-28"/></svg>
+        </div>
+    </div>
+
+     <ul class="text-white  bg-emerald-800 px-3 py-2 justify-between flex items-center space-x-4">
+        <li>
+            <a href="community.html">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 12.75c1.63 0 3.07.39 4.24.9c1.08.48 1.76 1.56 1.76 2.73V18H6v-1.61c0-1.18.68-2.26 1.76-2.73c1.17-.52 2.61-.91 4.24-.91M4 13c1.1 0 2-.9 2-2s-.9-2-2-2s-2 .9-2 2s.9 2 2 2m1.13 1.1c-.37-.06-.74-.1-1.13-.1c-.99 0-1.93.21-2.78.58A2.01 2.01 0 0 0 0 16.43V18h4.5v-1.61c0-.83.23-1.61.63-2.29M20 13c1.1 0 2-.9 2-2s-.9-2-2-2s-2 .9-2 2s.9 2 2 2m4 3.43c0-.81-.48-1.53-1.22-1.85A6.95 6.95 0 0 0 20 14c-.39 0-.76.04-1.13.1c.4.68.63 1.46.63 2.29V18H24zM12 6c1.66 0 3 1.34 3 3s-1.34 3-3 3s-3-1.34-3-3s1.34-3 3-3"/></svg></a>
+  
+          <li class="flex items-center justify-between flex-1 pr-2">
+            <div class="flex items-center space-x-2 justify-center relative">
+                <span class="font-semibold">Chats </span> <span class="bg-white text-emerald-800 text-xs w-4 h-4 flex items-center justify-center rounded-full font-medium">7</span>
+                <div class="bg-white h-1 w-full absolute right-0 top-8"></div>
+
+            </div>
+
+            <div class="flex items-center space-x-2 justify-center relative">
+                <a href="updates.html" class="font-semibold text-gray-300">Updates</a> 
+            </div>
+
+            <div class="flex items-center space-x-2 justify-center relative">
+                <a href="calls.html" class="font-semibold text-gray-300">Calls</a>
+
+            </div>
+        </li>
+    </ul>
+</div>
+
+    <!-- chats -->
+<div class="bg-white h-auto relative">
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Tafe Mohan&background=random&color=fff" alt="Tafe Mohan"
+            class="rounded-full">
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">Tafe Mohan</h4>
+            <p class="text-xs">evning call panuyaa..</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">5:30 pm</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">2</span>
+        </div>
+    </div>
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Arun Frnd&background=random&color=fff" alt="Arun Frnd"
+            class="rounded-full border-2 p-0.5 border-green-600">
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">Arun Frnd 🧑‍🤝‍🧑❤️</h4>
+            <p class="text-xs">Pangu link send pannudaa</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">5:05 pm</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">1</span>
+        </div>
+    </div>
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Nagarj&background=random&color=fff" alt="Nagaraj"
+            class="rounded-full border-2 p-0.5 border-green-600">
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">Nagaraj</h4>
+            <p class="text-xs">😂😂🤣🤣😂😂🤣🤣</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">2:24 pm</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">1</span>
+        </div>
+    </div>
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Ak Jio&background=random&color=fff" alt="Ak Jio"
+            class="rounded-full">
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">AK Jio</h4>
+            <p class="text-xs">Thanks Bro :) </p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">1:05 pm</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">1</span>
+        </div>
+    </div>
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Praveen Bro&background=random&color=fff" alt="Praveen Bro"
+            class="rounded-full" >
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">Praveen Bro</h4>
+            <p class="text-xs">Machaan...</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">10:38 am</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">2</span>
+        </div>
+    </div>
+    <div class="bg-white px-3 py-3 flex space-x-4 items-center hover:cursor-pointer hover:bg-gray-100">
+        <div>
+            <img src="https://ui-avatars.com/api/?name=Only planning&background=random&color=fff" alt="Tafe Mohan"
+            class="rounded-full" >
+        </div>
+
+        <div class="flex-1">
+            <h4 class="font-semibold">Only Planning 😕</h4>
+            <p class="text-xs">Machaan oru vaaram chummaa goa'la</p>
+        </div>
+
+        <div class="flex flex-col justify-center items-center space-y-1">
+            <span class="text-green-600 font-semibold">10:30 am</span>
+            <span class="bg-green-600 text-xs text-white flex items-center justify-center rounded-full w-5 h-5">2</span>
+        </div>
+    </div>
+
+    <div class="bg-emerald-800 w-10 h-10 p-2 rounded-md flex items-center justify-center absolute bottom-4 right-4  hover:bg-emerald-900 cursor-pointer shadow-lg shadow-gray-300">
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" class="text-white"><path fill="currentColor" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2M6 9h12v2H6zm8 5H6v-2h8zm4-6H6V6h12z"/></svg>
+    </div>
+
+</div>
+
+
+   </section>
+
 </body>
 </html>
