--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" /> 
+
     <!-- Tailwind css link -->
     <link href="assets/css/output.css" rel="stylesheet">
 </head>
