--- a/updates.html
+++ b/updates.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png" />
 
-    <link rel="stylesheet" href="/assets/css/output.css">
+    <link href="assets/css/output.css" rel="stylesheet">
 </head>
 <body class="bg-green-200">
    <!-- <h1 class="font-semibold text-center mb-5">Whatsapp UI Challenge (screen 1) </h1> -->
