--- a/updates.html
+++ b/updates.html
@@ -138,6 +138,10 @@
  
  
     </section>
+
+    <div class="max-w-md mx-auto text-center p-3">
+        <h4 class="text-xs font-semibold">WhatsApp Ui Cloned By &#169 <a class="underline text-emerald-900" target="_blank" href="https://github.com/Arunkumar14s">Arunkumar14s</a> </h4>
+       </div>
  
  </body>
 </html>
